  - More deprecation of older writeWebGL style controls.
  - Add extra knitr hooks, so support for rgl should be
    very similar to support for standard graphics output.
  - Major rewrite of the WebGL code so that transparency
    is handled better in rglwidget().  It has also been
    split into multiple files which are joined with 
    "minification" on installation.
  - Added utility function makeDependency() to support 
    Javascript library in source.
  - WebGL code now supports fog in scenes.  The default
    r3dDefaults now sets material$fog to TRUE, and bg$fog to
    "none".  (In rgl, fog must be set *both* in the background
    and in the object to display.)
    The formula used in WebGL is slightly different than in the 
    internal R display.) 
  - getr3dDefaults now has two optional arguments to specify
    what to retrieve, e.g. getr3dDefaults("material", "color")
    to retrieve r3dDefaults$material$color, with NULL 
    if either part is missing.
  - A bug in the initial color of a mesh object has been fixed.
  - A bug in translating mouse coordinates (reported on 
    StackOverflow by Richard Morey) when an rgl widget is
    included in a Gitbook has been fixed. 
  - Modified writeASY() for compatibility with Asymptote
    2.65.  (Reported by Pavel Stříž.)
  - Added fogScale parameter to bg3d() and rgl.bg() to
    allow increased or decreased fog.
  - Added fastTransparency parameter to spheres3d() and
    rgl.spheres(), to allow them to be drawn more quickly
    when transparency is used.
  - "mesh3d"" methods for shade3d, wire3d, and dots3d
    have been rewritten to share code, allowing meshes
    to have different front and back material properties.
  - New functions cur3d(), set3d(), close3d() and ids3d() have been 
    added.  Generally, users should use these rather than
    rgl.cur(), rgl.set(), rgl.close() and rgl.ids().
  - pop3d() has been modified slightly so that it no
    longer opens a new window if none is already present.