@@ -7,7 +7,7 @@
 }
 \usage{
 rgl.snapshot( filename, fmt = "png", top = TRUE )
-snapshot3d( filename, ..., scene )
+snapshot3d( filename, ..., scene, width, height)
 }
 \arguments{
   \item{filename}{full path to filename.}
@@ -16,6 +16,8 @@ snapshot3d( filename, ..., scene )
   \item{...}{arguments to pass to \code{rgl.snapshot} }
   \item{scene}{an optional result of \code{\link{scene3d}} 
     or \code{\link{rglwidget}} to plot}
+  \item{width, height}{optional specifications of output
+    size in pixels}
 }
 \details{
 Animations can be created in a loop modifying the scene and saving 
@@ -29,6 +31,12 @@ will include content from other windows if they cover the active rgl
 window.  Setting \code{top = TRUE} (the default) will use 
 \code{\link{rgl.bringtotop}} before the snapshot
 to avoid this.  
+
+There are likely limits to how large \code{width} and
+\code{height} can be set based on the display hardware; if these
+are exceeded the results are undefined.  A typical result
+is that the snapshot will still be made but at a smaller
+size.
 }
 \seealso{\code{\link{movie3d}}, \code{\link{rgl.viewpoint}}}
 
